tests/specs/ecosystem/oak/oak/14_2_0.test
oak/oak/14.2.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@oak/commons@0.7": "jsr:@oak/commons@0.7.0",
      "jsr:@std/assert@0.218": "jsr:@std/assert@0.218.2",
      "jsr:@std/assert@^0.218.2": "jsr:@std/assert@0.218.2",
      "jsr:@std/crypto@0.218": "jsr:@std/crypto@0.218.2",
      "jsr:@std/encoding@^0.218.2": "jsr:@std/encoding@0.218.2",
      "jsr:@std/http@0.218": "jsr:@std/http@0.218.2",
      "npm:path-to-regexp@6.2.1": "npm:path-to-regexp@6.2.1"
    },
    "jsr": {
      "@oak/commons@0.7.0": {
        "integrity": "4bd889b3dc9ddac1b602034d88c137f06de7078775961b51081beb5f175c120b",
        "dependencies": [
          "jsr:@std/assert@0.218"
        ]
      },
      "@std/assert@0.218.2": {
        "integrity": "7f0a5a1a8cf86607cd6c2c030584096e1ffad27fc9271429a8cb48cfbdee5eaf"
      },
      "@std/crypto@0.218.2": {
        "integrity": "8c5031a3a1c3ac3bed3c0d4bed2fe7e7faedcb673bbfa0edd10570c8452f5cd2",
        "dependencies": [
          "jsr:@std/assert@^0.218.2",
          "jsr:@std/encoding@^0.218.2"
        ]
      },
      "@std/encoding@0.218.2": {
        "integrity": "da55a763c29bf0dbf06fd286430b358266eb99c28789d89fe9a3e28edecb8d8e"
      },
      "@std/http@0.218.2": {
        "integrity": "54223b62702e665b9dab6373ea2e51235e093ef47228d21cfa0469ee5ac75c9b",
        "dependencies": [
          "jsr:@std/assert@^0.218.2",
          "jsr:@std/encoding@^0.218.2"
        ]
      }
    },
    "npm": {
      "path-to-regexp@6.2.1": {
        "integrity": "sha512-JLyh7xT1kizaEvcaXOQwOc2/Yhw6KZOvPf1S8401UyLk86CU79LN3vl7ztXGm/pZ+YjoyAJ4rxmHwbkBXJX+yw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:257:77

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:260:26

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:262:80

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   * `"error"` and `"listen"`. */ addEventListener(param0?: any, param1?: any, param2?: any): any {
                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/application.ts:264:35

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                          ~~~~~~
    at file://<tmpdir>/range.ts:23:27

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                        ~~~~~~
    at file://<tmpdir>/range.ts:23:41

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                                      ~~~~~~
    at file://<tmpdir>/range.ts:23:55

Found 7 errors.

